Bug 1859267 - Hook glib structured logging too. r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D191074